# snake-game

./: CMakeLists.txt  README.md
src/: Coord2d.cpp  Coord2d.hpp  CoordBounds.hpp  Food.cpp  Food.hpp  Game.cpp  Game.hpp  Randomizer.cpp  Randomizer.hpp  Rectangle.cpp  Rectangle.hpp  RendererInterface.hpp  SDLRenderer.cpp  SDLRenderer.hpp  Shape.cpp  Shape.hpp  Snake.cpp  Snake.hpp  Triangle.cpp  Triangle.hpp  main.cpp
